k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
  namespace: wisecow
spec:
  selector:
    app: wisecow
  ports:
    - protocol: TCP
      port: 80          
      targetPort: 4499  
  type: NodePort
